--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 			<td width="206">
 					<img src="./reports/SZ.png" width="150" style="box-shadow: 4px 4px 8px #888">
 				</td>		
-				<td> Exploration and construction of lightweight image restoration model<br>
+				<td> Exploration and Construction of Lightweight Image Restoration Model<br>
 					<p><em>Institute of Big Data Technology and Application, School of Computer and Software, Shenzhen University.</em><br>
 					Shenzhen, China, 2020.12.21.<br>
 					<a href="poster/SZ.pdf", target="_blank">[Poster]</a>
@@ -398,7 +398,7 @@
 			<td> SCF-2020, Shanghai, China, 2019.</td>
 		</tr>
 		<tr>
-			<td> Neurlps-Shanghai, Shanghai, China, 2019.</td>
+			<td> NeurlPS-Shanghai, Shanghai, China, 2019.</td>
 		</tr>
 		<tr>
 			<td> Ewha Womans University, Seoul, Korea, 2019.</td>
@@ -443,7 +443,7 @@
 			<td> The Hong Kong Polytechnic University, Hong Kong, China, 2018.</td>
 		</tr>
 		<tr>
-			<td> TCity University of Hong Kong, Hong Kong, China, 2018.</td>
+			<td> The City University of Hong Kong, Hong Kong, China, 2018.</td>
 		</tr>
 		<tr>
 			<td> THong Kong Baptist University, Hong Kong, China, 2018.</td>
@@ -475,6 +475,9 @@
 		<tr>
 			<td> Youth Vision Seminar, ShanghaiTech University, Shanghai, China, 2016.</td>
 		</tr>
+		<tr>
+			<td> Fudan University, Shanghai, China, 2016.</td>
+		</tr>
 	</tbody>
 </table>
 
@@ -489,7 +492,7 @@
 			<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 		</div>     
 	<br>
-        &copy; Juncheng Li | Last updated: 2020-12-20
+        &copy; Juncheng Li | Last updated: 2020-12-29
 	</center>
 	</p>
 
