--- a/index_zw.html
+++ b/index_zw.html
@@ -341,6 +341,143 @@
 </table>
 
 
+<h2>Keynotes</h3>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>	
+			<td width="206">
+				<img src="./reports/ICCV.png" width="150" style="box-shadow: 4px 4px 8px #888">
+			</td>		
+			<td> Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution<br>
+				<p><em>IEEE International Conference on Computer Vision</em> (<i><b>ICCV</b></i>).<br>
+				首尔, 韩国, 2019.11.02.<br>
+				<a href="slides/ICCVW_LCI_slides.pdf", target="_blank">[PPT]</a>
+			</td>
+		</tr>
+
+		<tr>	
+			<td width="206">
+					<img src="./reports/SZ.png" width="150" style="box-shadow: 4px 4px 8px #888">
+				</td>		
+				<td> Exploration and Construction of Lightweight Image Restoration Model<br>
+					<p><em>大数据技术与应用研究所，计算机与软件学院，深圳大学.</em><br>
+					深圳, 中国, 2020.12.21.<br>
+					<a href="poster/SZ.pdf", target="_blank">[Poster]</a>
+					<a href="slides/SZ-Lightweight.pdf", target="_blank">[Slides]</a>
+				</td>
+			</tr>
+	</tbody>
+</table>
+
+
+<h2>Meeting &amp; Visiting (2016.9-Now)</h2>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td>深圳大学, 深圳, 中国, 2020.</td>
+		</tr>
+		<tr>
+			<td> 湖南大学, 长沙, 中国, 2020.</td>
+		</tr>
+		<tr>
+			<td> 湖南师范大学, 长沙, 中国, 2020.</td>
+		</tr>
+		<tr>
+			<td> 国防科技大学, 长沙, 中国, 2020.</td>
+		</tr>
+		<tr>
+			<td> 中国工业与应用数学学会第十八届年会（CSIAM）, 长沙, 中国, 2020.</td>
+		</tr>
+        <tr>
+			<td> 中国模式识别与计算机视觉学术会议, 南京, 中国, 2020.</td>
+		</tr>
+		<tr>
+			<td> 智慧地球研讨会, 上海, 中国, 2019.</td>
+		</tr>
+		<tr>
+			<td> NeurlPS-上海站, 上海, 中国, 2019.</td>
+		</tr>
+		<tr>
+			<td> 梨花女子大学, 首尔, 韩国, 2019.</td>
+		</tr>
+		<tr>
+			<td> 国际计算机视觉大会（ICCV）, 首尔, 韩国, 2019.</td>
+		</tr>
+		<tr>
+			<td> 优酷-视频增强和超分辨率挑战赛, 杭州, 中国, 2019.</td>
+		</tr>
+		<tr>
+			<td> 研究助理, 香港中文大学, 香港, 中国, 2019.</td>
+		</tr>
+		<tr>
+			<td> 数字图像及数据科学最新进展研讨会, 上海交通大学, 上海, 中国, 2019.</td>
+		</tr>
+		<tr>
+			<td> 中国科学技术大学, 合肥, 中国, 2019.</td>
+		</tr>
+		<tr>
+			<td> 视觉与学习青年学者研讨会（VALSE）, 合肥, 中国, 2019.</td>
+		</tr>
+		<tr>
+			<td> 慕尼黑工业大学, 慕尼黑, 德国, 2018.</td>
+		</tr>
+		<tr>
+			<td> 欧洲计算机视觉大会（ECCV）, 慕尼黑, 德国, 2018.</td>
+		</tr>
+		<tr>
+			<td> ECCV-预演会议, 腾讯, 深圳, 中国, 2018.</td>
+		</tr>
+		<tr>
+			<td> 澳门理工学院, 澳门, 中国, 2018.</td>
+		</tr>
+		<tr>
+			<td> 香港大学, 香港, 中国, 2018.</td>
+		</tr>
+		<tr>
+			<td> 香港科技大学, 香港, 中国, 2018.</td>
+		</tr>
+		<tr>
+			<td> 香港理工大学, 香港, 中国, 2018.</td>
+		</tr>
+		<tr>
+			<td> 香港城市大学, 香港, 中国, 2018.</td>
+		</tr>
+		<tr>
+			<td> 香港浸会大学, 香港, 中国, 2018.</td>
+		</tr>
+		<tr>
+			<td> 研究助理, 香港中文大学, 香港, 中国, 2018.</td>
+		</tr>
+		<tr>
+			<td> AWS-数据全球峰会, 上海, 中国, 2018.</td>
+		</tr>
+		<tr>
+			<td> 医学图像计算青年研讨会（MICS）, 上海交通大学, 上海, 中国, 2017.</td>
+		</tr>
+		<tr>
+			<td> 人工智能海内外博士生论坛（FLAIR）, 上海, 中国, 2017.</td>
+		</tr>
+		<tr>
+			<td> 视觉与学习青年学者研讨会（VALSE）, 厦门大学, 厦门, 中国, 2017.</td>
+		</tr>
+		<tr>
+			<td> 天元基金医学图像处理讲习班, 浙江大学, 杭州, 中国, 2017.</td>
+		</tr>
+		<tr>
+			<td> 机器人暑期培训班, 华东师范大学, 上海, 中国, 2017.</td>
+		</tr>
+		<tr>
+			<td> 中国机器学习及其应用研讨会（MLA）, 南京大学, 南京, 中国, 2016.</td>
+		</tr>
+		<tr>
+			<td> 青年视觉研讨会, 上海科技大学, 上海, 中国, 2016.</td>
+		</tr>
+		<tr>
+			<td> 复旦大学, 上海, 中国, 2016.</td>
+		</tr>
+	</tbody>
+</table>
+
 
 <div id="footer">
 	<div id="footer-text"></div>
@@ -351,7 +488,7 @@
 			<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 		</div>     
 	<br>
-        &copy; Juncheng Li | Last updated: 2020-12-20
+        &copy; Juncheng Li | Last updated: 2020-12-29
 	</center>
 	</p>
 
