--- a/index_zw.html
+++ b/index_zw.html
@@ -482,16 +482,16 @@
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-	<p>
-	<center>
-		<div>
-			<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
-		</div>     
-	<br>
-        &copy; Juncheng Li | Last updated: 2020-12-29
-	</center>
-	</p>
 
+<p>
+<center>
+<div>
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
+</div>     
+<br>
+&copy; 李俊诚 | 最后更新: 2020-12-29
+</center>
+</p>
 
 </div>
 </body></html>
