--- a/index_zw.html
+++ b/index_zw.html
@@ -341,11 +341,11 @@
 </table>
 
 
-<h2>Keynotes</h3>
+<h2>主题演讲</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>	
-			<td width="110">
+			<td width="120">
 				<img src="./reports/ICCV.png" width="100" style="box-shadow: 4px 4px 8px #888">
 			</td>		
 			<td> Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution<br>
@@ -356,7 +356,7 @@
 		</tr>
 
 		<tr>	
-			<td width="110">
+			<td width="120">
 					<img src="./reports/SZ.png" width="100" style="box-shadow: 4px 4px 8px #888">
 				</td>		
 				<td> Exploration and Construction of Lightweight Image Restoration Model<br>
@@ -370,7 +370,7 @@
 </table>
 
 
-<h2>Meeting &amp; Visiting (2016.9-Now)</h2>
+<h2>参会 &amp; 参观 (2016.9-Now)</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
