--- a/index_zw.html
+++ b/index_zw.html
@@ -362,8 +362,8 @@
 				<td> Exploration and Construction of Lightweight Image Restoration Model<br>
 					<p><em>大数据技术与应用研究所，计算机与软件学院，深圳大学.</em><br>
 					深圳, 中国, 2020.12.21.<br>
-					<a href="poster/SZ.pdf", target="_blank">[Poster]</a>
-					<a href="slides/SZ-Lightweight.pdf", target="_blank">[Slides]</a>
+					<a href="poster/SZ.pdf", target="_blank">[海报]</a>
+					<a href="slides/SZ-Lightweight.pdf", target="_blank">[PPT]</a>
 				</td>
 			</tr>
 	</tbody>
