--- a/index_zw.html
+++ b/index_zw.html
@@ -370,7 +370,7 @@
 </table>
 
 
-<h2>参会 &amp; 参观 (2016.9-Now)</h2>
+<h2>参会 &amp; 参观 (2016.9-现在)</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
