--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 <h3>2016-Now (Graduate Period)</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>Innovative and Intelligent Youth, East China Normal University, 2020.</td></tr> 	
-		<tr><td>Outstanding Student, East China Normal University, 2020.</td></tr> 	
+		<tr><td>Innovative and Intelligent Youth, East China Normal University, 2020. (0.5%)</td></tr> 	
+		<tr><td>Outstanding Student, East China Normal University, 2020. (3.0%)</td></tr> 	
 		<tr><td>Wisdom Scholarship, East China Normal University, 2020. (1.5%)</td></tr> 	
 		<tr><td>Doctoral Research and Innovation Fund Project, East China Normal University, 2020.</td></tr> 	
 		<tr><td>Graduate Scholarship, East China Normal University, 2016-2020.</td></tr> 	
@@ -90,7 +90,7 @@
 <h3>2012-2016 (Undergraduate Period)</h3></tbody>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>Mingde Scholarship, China, 2015. (3%)</td></tr> 
+		<tr><td>Mingde Scholarship, China, 2015. (3.0%)</td></tr> 
 		<tr><td>Second Award in National Computer Design Contest, China, 2014, 2015.</td></tr> 
 		<tr><td>Outstanding Graduates, Jiangxi Normal University, 2016.</td></tr> 
 		<tr><td>Merit Student, Jiangxi Normal University, 2013-2016.</td></tr>
@@ -377,7 +377,7 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td>Shenzhen University, Shenzhen, China, 2020.</td>
+			<td> <em>Research Assistant</em>, Shenzhen University, Shenzhen, China, 2020.</td>
 		</tr>
 		<tr>
 			<td> Hunan University, Changsha, China, 2020.</td>
@@ -389,7 +389,7 @@
 			<td> National Defense University, Changsha, China, 2020.</td>
 		</tr>
 		<tr>
-			<td>CSIAM-2020, Changsha, China, 2020.</td>
+			<td> CSIAM-2020, Changsha, China, 2020.</td>
 		</tr>
         <tr>
 			<td> PRCV-2020, Nanjing, China, 2020.</td>
@@ -410,7 +410,7 @@
 			<td> YouKu-VSRE-2019, Hanzhou, China, 2019.</td>
 		</tr>
 		<tr>
-			<td> RA, The Chinese University of Hong Kong, Hong Kong, China, 2019.</td>
+			<td> <em>Research Assistant</em>, The Chinese University of Hong Kong, Hong Kong, China, 2019.</td>
 		</tr>
 		<tr>
 			<td> RAMIDS-2019, Shanghai Jiao Tong University, Shanghai, China, 2019.</td>
@@ -449,7 +449,7 @@
 			<td> THong Kong Baptist University, Hong Kong, China, 2018.</td>
 		</tr>
 		<tr>
-			<td> RA, The Chinese University of Hong Kong, Hong Kong, China, 2018.</td>
+			<td> <em>Research Assistant</em>, The Chinese University of Hong Kong, Hong Kong, China, 2018.</td>
 		</tr>
 		<tr>
 			<td> AWS Reinvent, Shanghai, China, 2018.</td>
