--- a/index_zw.html
+++ b/index_zw.html
@@ -71,8 +71,8 @@
 <h3>2016-至今 (研究生期间)</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>创智青年, 华东师范大学, 2020.</td></tr> 	
-		<tr><td>优秀学生, 华东师范大学, 2020.</td></tr> 	
+		<tr><td>创智青年, 华东师范大学, 2020. (0.5%)</td></tr> 	
+		<tr><td>优秀学生, 华东师范大学, 2020. (3.0%)</td></tr> 	
 		<tr><td>智慧奖学金, 华东师范大学, 2020. (1.5%)</td></tr> 	
 		<tr><td>博士生科研创新基金项目, 华东师范大学, 2020.</td></tr> 	
 		<tr><td>研究生奖学金, 华东师范大学, 2016-2020.</td></tr> 	
@@ -89,7 +89,7 @@
 <h3>2012-2016 (本科期间)</h3></tbody>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>明德奖学金, 中国, 2015. (3%)</td></tr> 
+		<tr><td>明德奖学金, 中国, 2015. (3.0%)</td></tr> 
 		<tr><td>中国大学生计算机设计大赛全国二等奖, 中国, 2014, 2015.</td></tr> 
 		<tr><td>优秀毕业生, 江西师范大学, 2016.</td></tr> 
 		<tr><td>三好学生, 江西师范大学, 2013-2016.</td></tr>
@@ -374,7 +374,7 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td>深圳大学, 深圳, 中国, 2020.</td>
+			<td> <em>研究助理</em>, 深圳大学, 深圳, 中国, 2020.</td>
 		</tr>
 		<tr>
 			<td> 湖南大学, 长沙, 中国, 2020.</td>
@@ -407,7 +407,7 @@
 			<td> 优酷-视频增强和超分辨率挑战赛, 杭州, 中国, 2019.</td>
 		</tr>
 		<tr>
-			<td> 研究助理, 香港中文大学, 香港, 中国, 2019.</td>
+			<td> <em>研究助理</em>, 香港中文大学, 香港, 中国, 2019.</td>
 		</tr>
 		<tr>
 			<td> 数字图像及数据科学最新进展研讨会, 上海交通大学, 上海, 中国, 2019.</td>
@@ -446,7 +446,7 @@
 			<td> 香港浸会大学, 香港, 中国, 2018.</td>
 		</tr>
 		<tr>
-			<td> 研究助理, 香港中文大学, 香港, 中国, 2018.</td>
+			<td> <em>研究助理</em>, 香港中文大学, 香港, 中国, 2018.</td>
 		</tr>
 		<tr>
 			<td> AWS-数据全球峰会, 上海, 中国, 2018.</td>
