--- a/index_zw.html
+++ b/index_zw.html
@@ -154,7 +154,7 @@
 		Faming Fang, <b>Juncheng Li*</b>, and Tieyong Zeng.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
 		<font color="red">*第一贡献人, 作者按字母序排列。</font><br> 
-		<font color="red">该工作是在香港中文大学访问期间完成的。</font><br> 
+		<font color="red">该工作在香港中文大学访问期间完成。</font><br> 
         <a href="paper/TIP_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[代码]</a>
 		<a href="https://junchenglee.com/projects/TIP2020_SEANET", target="_blank">[项目主页]</a>
@@ -173,7 +173,7 @@
 		Faming Fang, <b>Juncheng Li*</b>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang.
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
 		<font color="red">*第一贡献人, 作者按字母序排列。</font><br> 
-		<font color="red">该工作是在香港中文大学访问期间完成的。</font><br> 
+		<font color="red">该工作在香港中文大学访问期间完成。</font><br> 
         <a href="paper/TNNLS_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[代码]</a>
 		<a href="https://junchenglee.com/projects/TNNLS2020_MLEFGN", target="_blank">[项目主页]</a>
