--- a/index_zw.html
+++ b/index_zw.html
@@ -92,9 +92,9 @@
 		<tr><td>明德奖学金, 中国, 2015. (3.0%)</td></tr> 
 		<tr><td>中国大学生计算机设计大赛全国二等奖, 中国, 2014, 2015.</td></tr> 
 		<tr><td>优秀毕业生, 江西师范大学, 2016.</td></tr> 
-		<tr><td>三好学生, 江西师范大学, 2013-2016.</td></tr>
-		<tr><td>优秀学生, 江西师范大学, 2013-2016.</td></tr> 
-		<tr><td>一等学业奖学金, 江西师范大学, 2013-2016</td></tr> 
+		<tr><td>三好学生, 江西师范大学, 2013-2016. (连续4年)</td></tr>
+		<tr><td>优秀学生, 江西师范大学, 2013-2016. (连续4年)</td></tr> 
+		<tr><td>一等学业奖学金, 江西师范大学, 2013-2016. (连续4年)</td></tr> 
 	</tbody>
 </table>
 
