--- a/index_zw.html
+++ b/index_zw.html
@@ -124,7 +124,9 @@
 
 
 <h2>精选出版物 </h2>
-<h3>[总引用: 286] [最高引用: 166] [总影响因子: 34.066] [接收论文: 13]</h3>
+<h3>[总引用: 286] [最高引用: 166] [总影响因子: 34.066] [接收论文: 13]</h3><br>
+<h3>已接收: ECCV, TNNLS, TIP, TCSVT, TMM, CVPRW, ICCVW, ACCV, 等等。</h3>
+<h3>审稿中: CVPR, PR, TCSVT, TMM, ECME, 等等。</h3>
 <h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
