--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 286] [Highest Citation: 166] [Total IF: 34.066] [Accepted: 13]</h3> <br>
+<h3>[Total Citations: 286] [Highest Citation: 166] [Total IF: 34.066] [Accepted: 13]</h3>
 <h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, CVPRW, ICCVW, ACCV, etc.</h3>
 <h3>Under Review: CVPR, PR, TCSVT, TMM, ECME, etc.</h3>
 <h4>Journal Papers</h4>
