--- a/index_zw.html
+++ b/index_zw.html
@@ -278,6 +278,39 @@
 </tbody></table>
 
 
+<h4>Preprints Papers</h4></table>
+<table id="tbPublications" width="100%">
+    <tr>	
+		<td width="206">
+		<img src="./indexpics/A1.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="https://arxiv.org/pdf/2006.13511.pdf" target="_blank">Disentangle Perceptual Learning through Online Contrastive Learning</a><br>
+		Kangfu Mei, Yao Lu, Qiaosi Yi, Haoyu Wu, <b>Juncheng Li</b>, Rui Huang
+		<p><em>arXiv preprint arXiv:2006.13511.</em><br>
+		<a href="https://arxiv.org/pdf/2006.13511.pdf", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+	
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/A2.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2101.01479.pdf" target="_blank">Scale-Aware Network with Regional and Semantic Attentions for Crowd Counting under Cluttered Background/a><br>
+		Qiaosi Yi, Yunxing Liu, Aiwen Jiang, <b>Juncheng Li</b>, Kangfu Mei, Mingwen Wang
+		<p><em>arXiv preprint arXiv:2101.01479.</em><br>
+		<a href="https://arxiv.org/pdf/2101.01479.pdf", target="_blank">[论文]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>	
+</tbody></table>
+
+
 
 <h2>学术服务</h2>
 
