--- a/index_zw.html
+++ b/index_zw.html
@@ -299,7 +299,7 @@
 		<td width="206">
 		<img src="./indexpics/A2.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/pdf/2101.01479.pdf" target="_blank">Scale-Aware Network with Regional and Semantic Attentions for Crowd Counting under Cluttered Background/a><br>
+		<td> <a href="https://arxiv.org/pdf/2101.01479.pdf" target="_blank">Scale-Aware Network with Regional and Semantic Attentions for Crowd Counting under Cluttered Background</a><br>
 		Qiaosi Yi, Yunxing Liu, Aiwen Jiang, <b>Juncheng Li</b>, Kangfu Mei, Mingwen Wang
 		<p><em>arXiv preprint arXiv:2101.01479.</em><br>
 		<a href="https://arxiv.org/pdf/2101.01479.pdf", target="_blank">[论文]</a>
