--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		<td> <a href="paper/TCSVT_2020.pdf" target="_blank">MDCN: Multi-scale Dense Cross Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang.
 		<p><em>IEEE Transactions on Circuits and Systems for Video Technology</em> (<i><b>IEEE TCSVT</b></i>), 2020. <br>
-		<font color="red">Improved version of MSRN.</font><br>
+		<font color="red">Improved version of MSRN. SCI-2.</font><br>
         <a href="paper/TCSVT_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[Code]</a>
 		<a href="https://junchenglee.com/projects/TCSVT2020_MDCN", target="_blank">[Homepage]</a>
@@ -157,7 +157,7 @@
 		Faming Fang, <b>Juncheng Li*</b>, and Tieyong Zeng.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
 		<font color="red">*First contributor, Author names alphabetically.</font><br> 
-		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong (CUHK).</font><br> 
+		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong (CUHK). SCI-1, Top journal.</font><br> 
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[Code]</a>
 		<a href="https://junchenglee.com/projects/TIP2020_SEANET", target="_blank">[Homepage]</a>
@@ -176,7 +176,7 @@
 		Faming Fang, <b>Juncheng Li*</b>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang.
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
 		<font color="red">*First contributor, Author names alphabetically.</font><br> 
-		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong (CUHK).</font><br> 
+		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong (CUHK). SCI-1, Top journal.</font><br> 
         <a href="paper/TNNLS_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[Code]</a>
 		<a href="https://junchenglee.com/projects/TNNLS2020_MLEFGN", target="_blank">[Homepage]</a>
@@ -194,7 +194,7 @@
 		<td> <a href="paper/TMM_2020.pdf" target="_blank">Luminance-aware Pyramid Network for Low-light Image Enhancement</a><br>
 		Jiaqian Li#, <b>Juncheng Li#</b>, Faming Fang, Fang Li, and Guixu Zhang.
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
-		<font color="red">#Equal Contribution</font><br> 
+		<font color="red">#Equal Contribution. SCI-1.</font><br> 
 		<a href="paper/TMM_2020.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
@@ -249,7 +249,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">The most popular paper. 213 stars and 48 forks in Github.</font><br>
+		<font color="red">Top CV conference. The most popular paper. 213 stars and 48 forks in Github.</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
