--- a/index_zw.html
+++ b/index_zw.html
@@ -137,7 +137,7 @@
 		<td> <a href="paper/TCSVT_2020.pdf" target="_blank">MDCN: Multi-scale Dense Cross Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang.
 		<p><em>IEEE Transactions on Circuits and Systems for Video Technology</em> (<i><b>IEEE TCSVT</b></i>), 2020. <br>
-		<font color="red">MSRN模型的改进版本。</font><br>
+		<font color="red">MSRN模型的改进版本。SCI-2区</font><br>
         <a href="paper/TCSVT_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[代码]</a>
 		<a href="https://junchenglee.com/projects/TCSVT2020_MDCN", target="_blank">[项目主页]</a>
@@ -156,7 +156,7 @@
 		Faming Fang, <b>Juncheng Li*</b>, and Tieyong Zeng.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
 		<font color="red">*第一贡献人, 作者按字母序排列。</font><br> 
-		<font color="red">该工作在香港中文大学访问期间完成。</font><br> 
+		<font color="red">该工作在香港中文大学访问期间完成。SCI-1区，顶级期刊。</font><br> 
         <a href="paper/TIP_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[代码]</a>
 		<a href="https://junchenglee.com/projects/TIP2020_SEANET", target="_blank">[项目主页]</a>
@@ -175,7 +175,7 @@
 		Faming Fang, <b>Juncheng Li*</b>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang.
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
 		<font color="red">*第一贡献人, 作者按字母序排列。</font><br> 
-		<font color="red">该工作在香港中文大学访问期间完成。</font><br> 
+		<font color="red">该工作在香港中文大学访问期间完成。SCI-1区，顶级期刊。</font><br> 
         <a href="paper/TNNLS_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[代码]</a>
 		<a href="https://junchenglee.com/projects/TNNLS2020_MLEFGN", target="_blank">[项目主页]</a>
@@ -193,7 +193,7 @@
 		<td> <a href="paper/TMM_2020.pdf" target="_blank">Luminance-aware Pyramid Network for Low-light Image Enhancement</a><br>
 		Jiaqian Li#, <b>Juncheng Li#</b>, Faming Fang, Fang Li, and Guixu Zhang.
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
-		<font color="red">#共同一作</font><br> 
+		<font color="red">#共同一作。 SCI-1区。</font><br> 
 		<a href="paper/TMM_2020.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
@@ -248,7 +248,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">最受欢迎论文，在GitHub上有213颗Star,48个Fork。</font><br>
+		<font color="red">计算机视觉顶级会议。最受欢迎论文，在GitHub上有213颗Star,48个Fork。</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[代码]</a>
