--- a/index_zw.html
+++ b/index_zw.html
@@ -137,7 +137,7 @@
 		<td> <a href="paper/TCSVT_2020.pdf" target="_blank">MDCN: Multi-scale Dense Cross Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang.
 		<p><em>IEEE Transactions on Circuits and Systems for Video Technology</em> (<i><b>IEEE TCSVT</b></i>), 2020. <br>
-		<font color="red">MSRN模型的改进版本。SCI-2区</font><br>
+		<font color="red">MSRN模型的改进版本。SCI-2区。</font><br>
         <a href="paper/TCSVT_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[代码]</a>
 		<a href="https://junchenglee.com/projects/TCSVT2020_MDCN", target="_blank">[项目主页]</a>
@@ -524,7 +524,7 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>     
 <br>
-&copy; 李俊诚 | 最后更新: 2020-12-29
+&copy; 李俊诚 | 最后更新: 2021-01-09
 </center>
 </p>
 
