--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 286] [Highest Citation: 166] [Total IF: 34.066] [Accepted: 13]</h3>
+<h3>[Total Citations: 284] [Highest Citation: 165] [Total IF: 34.066] [Accepted: 13]</h3>
 <h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, CVPRW, ICCVW, ACCV, etc.</h3>
 <h3>Under Review: CVPR, PR, TCSVT, TMM, ICME, etc.</h3>
 <h4>Journal Papers</h4>
@@ -360,13 +360,16 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> Member of China Computer Federation (CCF)</td>
-		</tr>
-		<tr>
 			<td> Member of the Computer Vision Foundation (CVF)</td>
 		</tr>
 		<tr>
+			<td> Member of China Computer Federation (CCF)</td>
+		</tr>
+		<tr>
 			<td> Member of the China Society of Image Graphics (CSIG)</td>
+		</tr>
+		<tr>
+			<td> Member of the Chinese Association for Artificial Intelligence (CAAI)</td>
 		</tr>
 		<tr>
 			<td> Founder of CLF Studio 【A non-profit student innovation studio】</td>
