--- a/index_zw.html
+++ b/index_zw.html
@@ -124,7 +124,7 @@
 
 
 <h2>精选出版物 </h2>
-<h3>[总引用: 286] [最高引用: 166] [总影响因子: 34.066] [接收论文: 13]</h3>
+<h3>[总引用: 284] [最高引用: 165] [总影响因子: 34.066] [接收论文: 13]</h3>
 <h3>已接收: ECCV, TNNLS, TIP, TCSVT, TMM, CVPRW, ICCVW, ACCV, 等等。</h3>
 <h3>审稿中: CVPR, PR, TCSVT, TMM, ICME, 等等。</h3>
 <h4>期刊论文</h4>
@@ -358,13 +358,16 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> 中国计算机学会（CCF）会员</td>
-		</tr>
-		<tr>
 			<td> 计算机视觉基金会（CVF）会员</td>
 		</tr>
 		<tr>
+			<td> 中国计算机学会（CCF）会员</td>
+		</tr>
+		<tr>
 			<td> 中国图象图形学学会（CSIG）会员</td>
+		</tr>
+		<tr>
+			<td> 中国人工智能学会（CAAI）会员</td>
 		</tr>
 		<tr>
 			<td> 丛林蜂工作室（CLF Studio）创始人 【非营利学生创新工作室】</td>
