--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 <h2>Selected Publications </h2>
 <h3>[Total Citations: 284] [Highest Citation: 165] [Total IF: 34.066] [Accepted: 13]</h3>
 <h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, CVPRW, ICCVW, ACCV, etc.</h3>
-<h3>Under Review: CVPR, PR, TCSVT, TMM, ICME, etc.</h3>
+<h3>Under Review: PR, TCSVT, TMM, ICME, etc.</h3>
 <h4>Journal Papers</h4>
-<table id="tbPublications" width="100%">
+<table id="tbPublications" wßidth="100%">
 	<tbody>
     <tr>	
 		<td width="206">
