add visited coties

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 
 <p>My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and images processing (e.g., image super-resolution, image denoising, and image dehazing).</p>
 
+<p>This web used to record my research achievement and also used to record my life experience.</p>
+
 
 <h2>Honors &amp; Awards</h2>
 
@@ -519,6 +521,22 @@
 	</tbody>
 </table>
 
+
+
+<h2>Visited Cities</h2>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td>Germany: Munich</td>
+		</tr>
+		<tr>
+			<td>Korea: Seoul</td>
+		</tr>
+		<tr>
+			<td>China: Hong Kong, Macao, Beijing, Shanghai, Guangzhou, Shenzhen, Baoding, Hefei, Tianjin, Qingdao, Hanzhou, Jiaxing, Nanjing, Suzhou, Yangzhou, Lianyungang, Huaian, Wuxi, Shenyang, Changsha, Wuhan, Nanchang, Jiujiang, Shangrao, Jingdezhen, Xiamen, Fuzhou, Quanzhou, Putian</td>
+		</tr>
+	</tbody>
+</table>
 
 
 <div id="footer">
