--- a/index_zw.html
+++ b/index_zw.html
@@ -66,6 +66,8 @@
 
 <p>我的研究兴趣包括人工智能及其在计算机视觉（例如：图像拼接，图像分割, 人群计数）和图像处理（例如：图像超分辨率，图像去噪, 图像去雾）中的应用。</p>
 
+<p>该网站用于记录我的研究成果，也用于记录我的生活经历。</p>
+
 <h2>荣誉 &amp; 奖项</h2>
 
 <h3>2016-至今 (研究生期间)</h3>
@@ -512,6 +514,21 @@
 		</tr>
 		<tr>
 			<td> 复旦大学, 上海, 中国, 2016.</td>
+		</tr>
+	</tbody>
+</table>
+
+<h2>去过的城市</h2>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td>德国: 慕尼黑</td>
+		</tr>
+		<tr>
+			<td>韩国: 首尔</td>
+		</tr>
+		<tr>
+			<td>中国: 香港, 澳门, 北京, 上海, 广州, 深圳, 保定, 合肥, 天津, 青岛, 杭州, 嘉兴, 南京, 苏州, 扬州, 连云港, 淮安, 无锡, 沈阳, 长沙, 武汉, 南昌, 九江, 上饶, 景德镇, 厦门, 福州, 泉州, 莆田。</td>
 		</tr>
 	</tbody>
 </table>
