--- a/index.html
+++ b/index.html
@@ -52,11 +52,18 @@
 					<a href="index_zw.html", target="_blank"><img src="./pic/zw.png" height="30px" style="margin-bottom:-3px"></a>
 				</p>
 			</td>
+
+			<td>
+				<p><em>Success is not final, failure is not fatal, it is the courage to continue that counts.--Winston Churchill</em><br>
+			</td>
+
 			<td>
 				<img src="./pic/JunchengLi.jpeg" border="0" width="180"><br>
 			</td>
-		</tr><tr>
-	</tr></tbody>
+		</tr>
+		<tr>
+		</tr>
+	</tbody>
 </table>
 
 <h2>Biography</h2>
@@ -529,9 +536,11 @@
 		<tr>
 			<td>China: Hong Kong, Macao, Beijing, Shanghai, Guangzhou, Shenzhen, Baoding, Hefei, Tianjin, Qingdao, Hanzhou, Jiaxing, Nanjing, Suzhou, Yangzhou, Lianyungang, Huaian, Wuxi, Shenyang, Changsha, Wuhan, Nanchang, Jiujiang, Shangrao, Jingdezhen, Xiamen, Fuzhou, Quanzhou, Putian</td>
 		</tr>
+		<br>
 		<tr>
 			<td>Germany: Munich</td>
 		</tr>
+		<br>
 		<tr>
 			<td>Korea: Seoul</td>
 		</tr>
