--- a/index_zw.html
+++ b/index_zw.html
@@ -52,11 +52,18 @@
 					<a href="index.html", target="_blank"><img src="./pic/en.png" height="30px" style="margin-bottom:-3px"></a>
 				</p>
 			</td>
+
+			<td>
+				<p><em>成功不是终结，失败也不是，重要的是继续前行的勇气。--温斯顿·丘吉尔</em><br>
+			</td>
+
 			<td>
 				<img src="./pic/JunchengLi.jpeg" border="0" width="180"><br>
 			</td>
-		</tr><tr>
-	</tr></tbody>
+		</tr>
+		<tr>
+		</tr>
+	</tbody>
 </table>
 
 <h2>简介</h2>
@@ -524,9 +531,11 @@
 		<tr>
 			<td>中国: 香港, 澳门, 北京, 上海, 广州, 深圳, 保定, 合肥, 天津, 青岛, 杭州, 嘉兴, 南京, 苏州, 扬州, 连云港, 淮安, 无锡, 沈阳, 长沙, 武汉, 南昌, 九江, 上饶, 景德镇, 厦门, 福州, 泉州, 莆田。</td>
 		</tr>
+		<br>
 		<tr>
 			<td>德国: 慕尼黑</td>
 		</tr>
+		<br>
 		<tr>
 			<td>韩国: 首尔</td>
 		</tr>
