--- a/index.html
+++ b/index.html
@@ -50,13 +50,11 @@
 					<a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/CV-JunchengLi", target="_blank"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
 					<a href="index_zw.html", target="_blank"><img src="./pic/zw.png" height="30px" style="margin-bottom:-3px"></a>
+				</p><br>
+				<p>
+					<em>Success is not final, failure is not fatal, it is the courage to continue that counts.--Winston Churchill</em>
 				</p>
 			</td>
-
-			<td>
-				<p><em>Success is not final, failure is not fatal, it is the courage to continue that counts.--Winston Churchill</em><br>
-			</td>
-
 			<td>
 				<img src="./pic/JunchengLi.jpeg" border="0" width="180"><br>
 			</td>
