--- a/index_zw.html
+++ b/index_zw.html
@@ -50,13 +50,9 @@
 					<a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/CV-JunchengLi", target="_blank"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
 					<a href="index.html", target="_blank"><img src="./pic/en.png" height="30px" style="margin-bottom:-3px"></a>
-				</p>
+				</p><br>
+				<p><em>成功不是终结，失败也不是，重要的是继续前行的勇气。--温斯顿·丘吉尔</em></p>
 			</td>
-
-			<td>
-				<p><em>成功不是终结，失败也不是，重要的是继续前行的勇气。--温斯顿·丘吉尔</em><br>
-			</td>
-
 			<td>
 				<img src="./pic/JunchengLi.jpeg" border="0" width="180"><br>
 			</td>
