--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<a href="index_zw.html", target="_blank"><img src="./pic/zw.png" height="30px" style="margin-bottom:-3px"></a>
 				</p><br>
 				<p>
-					<em>Success is not final, failure is not fatal, it is the courage to continue that counts.--Winston Churchill</em>
+					<em>Success is not final, failure is not fatal, it is the courage to continue that counts.--Churchill</em>
 				</p>
 			</td>
 			<td>
