--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
 					ORCID: 0000-0001-7314-6754<br>
 					Email: cvjunchengli@gmail.com 	       
 				</p>
+
+				<br>
+				<p>
+					<em>Success is not final, failure is not fatal, it is the courage to continue that counts.--Churchill</em>
+				</p>
+
 				<p> 
 					<!-- <a href="https://github.com/CV-JunchengLi", target="_blank"><img src="./pic/cv_s.png" height="30px" style="margin-bottom:-3px"></a> -->
 					<!-- <a href="JunchengLi-CV.pdf", target="_blank"><img src="./pic/cv_s.png" height="30px" style="margin-bottom:-3px"></a> -->
@@ -51,9 +57,6 @@
 					<a href="https://github.com/CV-JunchengLi", target="_blank"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
 					<a href="index_zw.html", target="_blank"><img src="./pic/zw.png" height="30px" style="margin-bottom:-3px"></a>
 				</p><br>
-				<p>
-					<em>Success is not final, failure is not fatal, it is the courage to continue that counts.--Churchill</em>
-				</p>
 			</td>
 			<td>
 				<img src="./pic/JunchengLi.jpeg" border="0" width="180"><br>
@@ -523,15 +526,19 @@
 	</tbody>
 </table>
 
-<h3>Visited Cities</h3>
+<h2>Visited Cities</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td>China: Hong Kong, Macao, Beijing, Shanghai, Guangzhou, Shenzhen, Baoding, Hefei, Tianjin, Qingdao, Hanzhou, Jiaxing, Nanjing, Suzhou, Yangzhou, Lianyungang, Huaian, Wuxi, Shenyang, Changsha, Wuhan, Nanchang, Jiujiang, Shangrao, Jingdezhen, Xiamen, Fuzhou, Quanzhou, Putian</td>
-		</tr><br>
+			<td>China: Hong Kong, Macao, Beijing, Shanghai, Guangzhou, Shenzhen, Baoding, Hefei, Tianjin, Qingdao, Hanzhou, Jiaxing, Nanjing, Suzhou, Yangzhou, Lianyungang, Huaian, Wuxi, Shenyang, Changsha, Wuhan, Nanchang, Jiujiang, Shangrao, Jingdezhen, Xiamen, Fuzhou, Quanzhou, Putian.</td>
+		</tr>
+		<tr>
+		</tr>
 		<tr>
 			<td>Germany: Munich</td>
-		</tr><br>
+		</tr>
+		<tr>
+		</tr>
 		<tr>
 			<td>Korea: Seoul</td>
 		</tr>
