--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td><i><b>China</b></i>: Hong Kong, Macao, Beijing, Shanghai, Guangzhou, Shenzhen, Baoding, Hefei, Tianjin, Qingdao, Hanzhou, Jiaxing, Nanjing, Suzhou, Yangzhou, Lianyungang, Huaian, Wuxi, Shenyang, Changsha, Wuhan, Nanchang, Jiujiang, Shangrao, Jingdezhen, Xiamen, Fuzhou, Quanzhou, Putian.</td>
+			<td><i><b>China</b></i>: Hong Kong, Macao, Beijing, Shanghai, Guangzhou, Shenzhen, Baoding, Hefei, Tianjin, Qingdao, Hangzhou, Jiaxing, Nanjing, Suzhou, Yangzhou, Lianyungang, Huaian, Wuxi, Shenyang, Changsha, Wuhan, Nanchang, Jiujiang, Shangrao, Jingdezhen, Xiamen, Fuzhou, Quanzhou, Putian.</td>
 		</tr>
 		<tr>
 			<td><i><b>Germany</b></i>: Munich</td>
