--- a/index_zw.html
+++ b/index_zw.html
@@ -133,8 +133,8 @@
 
 <h2>精选出版物 </h2>
 <h3>[总引用: 313] [最高引用: 178] [总影响因子: 34.066] [接收论文: 13]</h3>
-<h3>已接收: ECCV, TNNLS, TIP, TCSVT, TMM, CVPRW, ICCVW, ACCV, 等等。</h3>
-<h3>审稿中: PR, TCSVT, TMM, ICME, 等等。</h3>
+<h3>已接收: ECCV, TNNLS, TIP, TCSVT, TMM, CVPRW, ICCVW, ICME, ACCV, 等等。</h3>
+<h3>审稿中: PR, TCSVT, TMM, 等等。</h3>
 <h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
