--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 
 <h2>Selected Publications </h2>
 <h3>[Total Citations: 313] [Highest Citation: 178] [Total IF: 34.066] [Accepted: 13]</h3>
-<h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, CVPRW, ICCVW, ACCV, etc.</h3>
-<h3>Under Review: PR, TCSVT, TMM, ICME, etc.</h3>
+<h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, CVPRW, ICCVW, ICME, ACCV, etc.</h3>
+<h3>Under Review: PR, TCSVT, TMM, etc.</h3>
 <h4>Journal Papers</h4>
 <table id="tbPublications" wßidth="100%">
 	<tbody>
