--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <h2>Biography</h2>
 <p>
-	I am a PhD student at the School of Computer Science and Technology, East China Normal University (ECNU), co-advised by Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>. I will graduate in 2021.07.
+	I am a PhD student at the School of Computer Science and Technology, East China Normal University (ECNU), co-advised by Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>. I will graduate in 2021.06.
 </p>
 
 <p>My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and images processing (e.g., image super-resolution, image denoising, and image dehazing).</p>
@@ -82,6 +82,7 @@
 <h3>2016-Now (Graduate Period)</h3>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>Research Fellowship Scheme, The Chinese University of Hong Kong, 2021.</td></tr> 
 		<tr><td>Innovative and Intelligent Youth, East China Normal University, 2020. (0.5%)</td></tr> 	
 		<tr><td>Outstanding Student, East China Normal University, 2020. (3.0%)</td></tr> 	
 		<tr><td>Wisdom Scholarship, East China Normal University, 2020. (1.5%)</td></tr> 	
@@ -112,6 +113,11 @@
 
 <h2>Research Experience</h2>
 <ul>
+	<li>
+		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">coming soon</div><br>
+		Postdoctoral Fellow<br>
+		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ming Lui</a><br>
+	</li>
 	<li>
 		<div style="float:left; text-align:left">Shenzhen University, Shenzhen. </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div><br>
 		Research Assistant (RA)<br>
