--- a/index_zw.html
+++ b/index_zw.html
@@ -67,7 +67,7 @@
 
 <h2>简介</h2>
 <p>
-	我是华东师范大学计算机科学与技术学院的一名在读博士研究生, 由<b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank">张桂戌 </a></b>教授 和 <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">方发明 </a></b>教授共同指导。 我将于 2021.07 毕业。
+	我是华东师范大学计算机科学与技术学院的一名在读博士研究生, 由<b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank">张桂戌 </a></b>教授 和 <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">方发明 </a></b>教授共同指导。 我将于 2021.06 毕业。
 </p>
 
 <p>我的研究兴趣包括人工智能及其在计算机视觉（例如：图像拼接，图像分割, 人群计数）和图像处理（例如：图像超分辨率，图像去噪, 图像去雾）中的应用。</p>
@@ -79,6 +79,7 @@
 <h3>2016-至今 (研究生期间)</h3>
 <table style="border-spacing:2px">
 	<tbody>
+		<tr><td>研究奖学金计划, 香港中文大学, 2021.</td></tr> 
 		<tr><td>创智青年, 华东师范大学, 2020. (0.5%)</td></tr> 	
 		<tr><td>优秀学生, 华东师范大学, 2020. (3.0%)</td></tr> 	
 		<tr><td>智慧奖学金, 华东师范大学, 2020. (1.5%)</td></tr> 	
@@ -109,6 +110,11 @@
 
 <h2>研究经历</h2>
 <ul>
+	<li>
+		<div style="float:left; text-align:left">香港中文大学, 香港. </div> <div style="float:right; text-align:right">即将到来</div><br>
+		博士后研究员<br>
+		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a>教授和<a href="http://lokminglui.com/", target="_blank">Ming Lui</a>教授<br>
+	</li>
 	<li>
 		<div style="text-align:left">深圳大学, 深圳 </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div>
 		职位: 研究助理<br>
