--- a/index_zw.html
+++ b/index_zw.html
@@ -111,8 +111,8 @@
 <h2>研究经历</h2>
 <ul>
 	<li>
-		<div style="float:left; text-align:left">香港中文大学, 香港. </div> <div style="float:right; text-align:right">即将到来</div><br>
-		博士后研究员<br>
+		<div style="float:left; text-align:left">香港中文大学, 香港. </div> <div style="float:right; text-align:right">即将到来</div>
+		职位: 博士后研究员<br>
 		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a>教授和<a href="http://lokminglui.com/", target="_blank">Ming Lui</a>教授<br>
 	</li>
 	<li>
