--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <h2>Biography</h2>
 <p>
-	I am a PhD student at the School of Computer Science and Technology, East China Normal University (ECNU), co-advised by Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>. I will graduate in 2021.06.
+	I am a PhD student at the School of Computer Science and Technology, East China Normal University (ECNU), co-advised by Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>. I will graduate in 2021.06 and join CUHK-CMAI as a Postdoctoral Fellow in 2021.07.
 </p>
 
 <p>My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and images processing (e.g., image super-resolution, image denoising, and image dehazing).</p>
@@ -141,7 +141,7 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 322] [Highest Citation: 180] [Total IF: 34.066] [Accepted: 14]</h3>
+<h3>[Total Citations: 324] [Highest Citation: 182] [Total IF: 34.066] [Accepted: 14]</h3>
 <h3>Accepted: ECCV, TNNLS, TIP, TCSVT, TMM, CVPRW, ICCVW, ICME, ACCV, etc.</h3>
 <h3>Under Review: PR, TCSVT, TMM, etc.</h3>
 <h4>Journal Papers</h4>
