--- a/index_zw.html
+++ b/index_zw.html
@@ -67,7 +67,7 @@
 
 <h2>简介</h2>
 <p>
-	我是华东师范大学计算机科学与技术学院的一名在读博士研究生, 由<b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank">张桂戌 </a></b>教授 和 <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">方发明 </a></b>教授共同指导。 我将于 2021.06 毕业。
+	我是华东师范大学计算机科学与技术学院的一名在读博士研究生, 由<b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank">张桂戌 </a></b>教授 和 <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">方发明 </a></b>教授共同指导。 我将于 2021.06 毕业，并于2021.07加入香港中文大学人工智能研究中心担任博后研究员。
 </p>
 
 <p>我的研究兴趣包括人工智能及其在计算机视觉（例如：图像拼接，图像分割, 人群计数）和图像处理（例如：图像超分辨率，图像去噪, 图像去雾）中的应用。</p>
@@ -138,7 +138,7 @@
 
 
 <h2>精选出版物 </h2>
-<h3>[总引用: 322] [最高引用: 180] [总影响因子: 34.066] [接收论文: 14]</h3>
+<h3>[总引用: 324] [最高引用: 182] [总影响因子: 34.066] [接收论文: 14]</h3>
 <h3>已接收: ECCV, TNNLS, TIP, TCSVT, TMM, CVPRW, ICCVW, ICME, ACCV, 等等。</h3>
 <h3>审稿中: PR, TCSVT, TMM, 等等。</h3>
 <h4>期刊论文</h4>
