--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
 <h2>Research Experience</h2>
 <ul>
 	<li>
-		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">coming soon</div><br>
+		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">Coming Soon</div><br>
 		Postdoctoral Fellow<br>
+		Topic:  Image/Video Compression & Medical Image Reconstruction & Image Restoration<br>
 		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a><br>
 	</li>
 	<li>
@@ -265,7 +266,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top CV conference. The most popular paper. 220 stars and 51 forks in Github.</font><br>
+		<font color="red">Top CV conference. The most popular paper. 221 stars and 51 forks in Github.</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
