--- a/index_zw.html
+++ b/index_zw.html
@@ -113,6 +113,7 @@
 	<li>
 		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">即将到来</div>
 		职位: 博士后研究员<br>
+		研究内容: 图像/视频压缩、医学图像重建、图像复原<br>
 		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a>教授和<a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a>教授<br>
 	</li>
 	<li>
@@ -262,7 +263,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">计算机视觉顶级会议。最受欢迎论文，在GitHub上有220颗Star,51个Fork。</font><br>
+		<font color="red">计算机视觉顶级会议。最受欢迎论文，在GitHub上有221颗Star，51个Fork。</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[论文]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[海报]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[代码]</a>
