--- a/index_zw.html
+++ b/index_zw.html
@@ -295,34 +295,66 @@
 
 <h4>预印本论文</h4></table>
 <table id="tbPublications" width="100%">
-    <tr>	
-		<td width="206">
-		<img src="./indexpics/A1.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td><a href="https://arxiv.org/pdf/2006.13511.pdf" target="_blank">Disentangle Perceptual Learning through Online Contrastive Learning</a><br>
-		Kangfu Mei, Yao Lu, Qiaosi Yi, Haoyu Wu, <b>Juncheng Li</b>, Rui Huang
-		<p><em>arXiv preprint arXiv:2006.13511.</em><br>
-		<a href="https://arxiv.org/pdf/2006.13511.pdf", target="_blank">[论文]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-	<tr></tr>
-	
 
-	<tr>	
-		<td width="206">
-		<img src="./indexpics/A2.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://arxiv.org/pdf/2101.01479.pdf" target="_blank">Scale-Aware Network with Regional and Semantic Attentions for Crowd Counting under Cluttered Background</a><br>
-		Qiaosi Yi, Yunxing Liu, Aiwen Jiang, <b>Juncheng Li</b>, Kangfu Mei, Mingwen Wang
-		<p><em>arXiv preprint arXiv:2101.01479.</em><br>
-		<a href="https://arxiv.org/pdf/2101.01479.pdf", target="_blank">[论文]</a>
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-    <tr></tr>	
+		<tr>	
+			<td width="206">
+			<img src="./indexpics/MSFIN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+			</td>		
+			<td> <a href="https://arxiv.org/pdf/2103.13028.pdf" target="_blank">Lightweight Image Super-Resolution with Multi-scale Feature Interaction Network</a><br>
+			Zhengxue Wang, Guangwei Gao, <b>Juncheng Li</b>, Yi Yu, Huimin Lu
+			<p><em>arXiv preprint arXiv:2103.13028.</em><br>
+			<a href="https://arxiv.org/pdf/2103.13028.pdf", target="_blank">[Paper]</a>
+			</td>
+		</tr>
+	
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+	
+		<tr>	
+			<td width="206">
+			<img src="./indexpics/MSTN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+			</td>		
+			<td> <a href="https://arxiv.org/pdf/2102.12135.pdf" target="_blank">Efficient and Accurate Multi-scale Topological Network for Single Image Dehazing</a><br>
+			Qiaosi Yi, <b>Juncheng Li</b>, Faming Fang, Aiwen Jiang, Guixu Zhang
+			<p><em>arXiv preprint arXiv:2102.12135.</em><br>
+			<a href="https://arxiv.org/pdf/2102.12135.pdf", target="_blank">[Paper]</a>
+			</td>
+		</tr>
+		
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>
+	
+		<tr>	
+			<td width="206">
+			<img src="./indexpics/A2.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+			</td>		
+			<td> <a href="https://arxiv.org/pdf/2101.01479.pdf" target="_blank">Scale-Aware Network with Regional and Semantic Attentions for Crowd Counting under Cluttered Background</a><br>
+			Qiaosi Yi, Yunxing Liu, Aiwen Jiang, <b>Juncheng Li</b>, Kangfu Mei, Mingwen Wang
+			<p><em>arXiv preprint arXiv:2101.01479.</em><br>
+			<a href="https://arxiv.org/pdf/2101.01479.pdf", target="_blank">[Paper]</a>
+			</td>
+		</tr>
+	
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>	
+	
+		<tr>	
+			<td width="206">
+			<img src="./indexpics/A1.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+			</td>		
+			<td><a href="https://arxiv.org/pdf/2006.13511.pdf" target="_blank">Disentangle Perceptual Learning through Online Contrastive Learning</a><br>
+			Kangfu Mei, Yao Lu, Qiaosi Yi, Haoyu Wu, <b>Juncheng Li</b>, Rui Huang
+			<p><em>arXiv preprint arXiv:2006.13511.</em><br>
+			<a href="https://arxiv.org/pdf/2006.13511.pdf", target="_blank">[Paper]</a>
+			</td>
+		</tr>
+	
+		<tr></tr>
+		<tr></tr>
+		<tr></tr>	
 </tbody></table>
 
 
